k8s/demo-app/plant-name-parser.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plant-name-parser
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      component: plant-name-parser
  template:
    metadata:
      labels:
        component: plant-name-parser
      annotations:
        developer: Andrey G.
    spec:
      containers:
        - name: plant-name-parser
          image: aganyushkin/plant-name-parser-service:1.0.1
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "1"
              memory: "1Gi"
