k8s/demo-app/binary-storage.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: binary-storage-service
spec:
  type: ExternalName
  externalName: magni.midgard
