k8s/demo-app/plant-name-parser.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plant-name-parser-service
spec:
  selector:
    component: plant-name-parser
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
