k8s/demo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /binary
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8080
          - path: /parser
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8080
